--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -71,6 +71,20 @@ body:
     validations:
       required: true
   - type: input
+    id: red-core-version
+    attributes:
+      label: Red Core Version
+      placeholder: 0.6 Dev 1
+    validations:
+      required: true
+  - type: input
+    id: mixin-booter-version
+    attributes:
+      label: MixinBooter Version
+      placeholder: 8.9
+    validations:
+      required: true
+  - type: input
     id: java-version
     attributes:
       label: Java Version
