--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -1,24 +1,11 @@
 name: Qodana
 
-on:
-  workflow_dispatch:
-  pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
-
 jobs:
   qodana:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Code Checkout
-        uses: actions/checkout@v3.5.3
-
-          
-      - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2023.1.5
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+      - name: Qodana Composite
+        uses: Red-Studio-Ragnarok/Qodana-Composite@main
+        with:
+          qodana_token: ${{ secrets.QODANA_TOKEN }}
