--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ org.gradle.parallel = true
 org.gradle.caching = true
 
 # Mod Constants
-# Versioning must follow Ragnarök versioning convention: https://shor.cz/ragnarok_versioning_convention
+# Versioning must follow RagnarÃ¶k versioning convention: https://shor.cz/ragnarok_versioning_convention
 id = mwc
-version = 0.1-Dev-14
+version = 0.1-Dev-15
