--- a/build.gradle
+++ b/build.gradle
@@ -55,13 +55,6 @@ repositories {
         name 'Cleanroom'
         url 'https://maven.cleanroommc.com'
     }
-    maven {
-        name 'CurseMaven'
-        url 'https://cursemaven.com'
-        content {
-            includeGroup 'curse.maven'
-        }
-    }
 
     ivy {
         name 'Red Studio GitHub Releases'
@@ -76,7 +69,7 @@ repositories {
 dependencies {
     implementation 'Red-Studio-Ragnarok:Red-Core:0.4-Dev-2'
     sources 'Red-Studio-Ragnarok:Red-Core:0.4-Dev-2:sources@jar'
-    compileOnly rfg.deobf("curse.maven:groovyscript-687577:4905039")
+    implementation 'com.cleanroommc:groovyscript:0.7.2'
 
     jmh 'org.openjdk.jmh:jmh-core:1.36'
     jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.36'
