--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,10 @@ repositories {
         name 'Cleanroom'
         url 'https://maven.cleanroommc.com'
     }
-
+    maven {
+        name 'Mixin'
+        url 'https://repo.spongepowered.org/repository/maven-public/'
+    }
     ivy {
         name 'Red Studio GitHub Releases'
         url 'https://github.com/'
@@ -69,7 +72,7 @@ repositories {
 dependencies {
     implementation 'Red-Studio-Ragnarok:Red-Core:0.4-Dev-2'
     sources 'Red-Studio-Ragnarok:Red-Core:0.4-Dev-2:sources@jar'
-    implementation 'com.cleanroommc:groovyscript:0.7.2'
+    compileOnly 'com.cleanroommc:groovyscript:0.7.2'
 
     jmh 'org.openjdk.jmh:jmh-core:1.36'
     jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.36'
