--- a/build.gradle
+++ b/build.gradle
@@ -52,8 +52,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'Red-Studio-Ragnarok:Red-Core:0.6-Dev-2'
-    sources 'Red-Studio-Ragnarok:Red-Core:0.6-Dev-2:sources@jar'
+    implementation 'Red-Studio-Ragnarok:Red-Core:MC-1.7-1.12-0.6-Dev-2'
+    sources 'Red-Studio-Ragnarok:Red-Core:MC-1.7-1.12-0.6-Dev-2:sources@jar'
     compileOnly('com.cleanroommc:groovyscript:0.7.2'){
         transitive = false
     }
