Fix craftingmappings.json (#465)
Co-authored-by: Desoroxxx <desoroxxx@gmail.com>

--- a/src/main/resources/craftingmappings.json
+++ b/src/main/resources/craftingmappings.json
@@ -1886,24 +1886,6 @@
       ]
     },
     {
-      "entryName": "mwc:ACRWEMSKHandguard",
-      "craftingGroup": "ATTACHMENT_MODIFICATION",
-      "recipe": [
-        {
-          "entryName": "ingotGunmetal",
-          "defaultItem": "mwc:gunmetal_ingot",
-          "isOreDictionary": true,
-          "count": 2
-        },
-        {
-          "entryName": "ingotSteel",
-          "defaultItem": "mwc:steel_ingot",
-          "isOreDictionary": true,
-          "count": 1
-        }
-      ]
-    },
-    {
       "entryName": "mwc:ACRWEMSKHandguardTan",
       "craftingGroup": "ATTACHMENT_MODIFICATION",
       "recipe": [
@@ -1922,31 +1904,7 @@
       ]
     },
     {
-      "entryName": "mwc:ACRPrecisionHandGuard",
-      "craftingGroup": "ATTACHMENT_MODIFICATION",
-      "recipe": [
-        {
-          "entryName": "ingotGunmetal",
-          "defaultItem": "mwc:gunmetal_ingot",
-          "isOreDictionary": true,
-          "count": 3
-        }
-      ]
-    },
-    {
       "entryName": "mwc:ACRPrecisionHandGuardTan",
-      "craftingGroup": "ATTACHMENT_MODIFICATION",
-      "recipe": [
-        {
-          "entryName": "ingotGunmetal",
-          "defaultItem": "mwc:gunmetal_ingot",
-          "isOreDictionary": true,
-          "count": 3
-        }
-      ]
-    },
-    {
-      "entryName": "mwc:ACRSBRHandGuard",
       "craftingGroup": "ATTACHMENT_MODIFICATION",
       "recipe": [
         {
@@ -1970,31 +1928,7 @@
       ]
     },
     {
-      "entryName": "mwc:ACRPolymerHandguard",
-      "craftingGroup": "ATTACHMENT_MODIFICATION",
-      "recipe": [
-        {
-          "entryName": "ingotGunmetal",
-          "defaultItem": "mwc:gunmetal_ingot",
-          "isOreDictionary": true,
-          "count": 3
-        }
-      ]
-    },
-    {
       "entryName": "mwc:ACRPolymerHandguardTan",
-      "craftingGroup": "ATTACHMENT_MODIFICATION",
-      "recipe": [
-        {
-          "entryName": "ingotGunmetal",
-          "defaultItem": "mwc:gunmetal_ingot",
-          "isOreDictionary": true,
-          "count": 3
-        }
-      ]
-    },
-    {
-      "entryName": "mwc:ACRSquareDropHandguard",
       "craftingGroup": "ATTACHMENT_MODIFICATION",
       "recipe": [
         {
@@ -2408,31 +2342,7 @@
       ]
     },
     {
-      "entryName": "mwc:ACRFixedStock",
-      "craftingGroup": "ATTACHMENT_MODIFICATION",
-      "recipe": [
-        {
-          "entryName": "ingotGunmetal",
-          "defaultItem": "mwc:gunmetal_ingot",
-          "isOreDictionary": true,
-          "count": 3
-        }
-      ]
-    },
-    {
       "entryName": "mwc:ACRFixedStockTan",
-      "craftingGroup": "ATTACHMENT_MODIFICATION",
-      "recipe": [
-        {
-          "entryName": "ingotGunmetal",
-          "defaultItem": "mwc:gunmetal_ingot",
-          "isOreDictionary": true,
-          "count": 3
-        }
-      ]
-    },
-    {
-      "entryName": "mwc:ACRPRSStock",
       "craftingGroup": "ATTACHMENT_MODIFICATION",
       "recipe": [
         {
@@ -8052,7 +7962,7 @@
       ]
     },
     {
-      "entryName": "mwc:combat_sustainment_backpack",
+      "entryName": "mwc:combat_sustainment_backpack_tan",
       "craftingGroup": "GEAR",
       "recipe": [
         {
@@ -8106,7 +8016,7 @@
       ]
     },
     {
-      "entryName": "mwc:assault_backpack",
+      "entryName": "mwc:assault_backpack_tan",
       "craftingGroup": "GEAR",
       "recipe": [
         {
@@ -8160,7 +8070,7 @@
       ]
     },
     {
-      "entryName": "mwc:f5switchbladebackpack",
+      "entryName": "mwc:f5_switchblade_backpack",
       "craftingGroup": "GEAR",
       "recipe": [
         {
@@ -8178,7 +8088,7 @@
       ]
     },
     {
-      "entryName": "mwc:tru_spec_cordura_backpack",
+      "entryName": "mwc:tru_spec_cordura_backpack_tan",
       "craftingGroup": "GEAR",
       "recipe": [
         {
