Fixed crash when looking at the night vision googles in the workbench

--- a/src/main/resources/craftingmappings.json
+++ b/src/main/resources/craftingmappings.json
@@ -8261,7 +8261,7 @@
         },
         {
           "entryName": "ingotGold",
-          "defaultItem": "minecraft:gold",
+          "defaultItem": "minecraft:gold_ingot",
           "isOreDictionary": true,
           "count": 2
         }
