--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,5 +1,5 @@
 version: "1.0"
-linter: jetbrains/qodana-jvm-community:2023.3
+linter: jetbrains/qodana-jvm:2024.2
 profile:
   name: qodana.recommended
 fixesStrategy: cleanup
