Qodana: Try quick fixes

--- a/qodana.yaml
+++ b/qodana.yaml
@@ -2,7 +2,7 @@ version: "1.0"
 linter: jetbrains/qodana-jvm:2024.2
 profile:
   name: qodana.recommended
-fixesStrategy: cleanup
+fixesStrategy: apply
 include:
   - name: VulnerableLibrariesGlobal
   - name: CheckDependencyLicenses
