Qodana: Run automatically on push and pr

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -2,16 +2,19 @@ name: Qodana
 
 on:
   workflow_dispatch:
+  pull_request:
+  push:
+    branches:
+      - next
+      - release
 
 jobs:
   qodana:
     runs-on: ubuntu-latest
-    
     permissions:
       contents: write
       pull-requests: write
       checks: write
-    
     steps:
       - name: Qodana Composite
         uses: Red-Studio-Ragnarok/Qodana-Composite@main
