--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   qodana:
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       pull-requests: write
